<?xml version="1.0"?>
<package>
  <name>msg_dll_generator</name>
  <version>1.0.0</version>
  <description>ROS Package to autogenerate Messages.dll using ROS.NET's YAMLParser</description>

  <maintainer email="haewon@media.mit.edu">Hae Won Park</maintainer>
  <license>MIT</license>
  <author email="yaseen@mit.edu">Yaseen Alkhafaji</author>

  <buildtool_depend>catkin</buildtool_depend>

</package>
